Fix Vercel config and update project

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 TARGET_URL="https://www.example.com"
 API_KEY="replace-me"
 PORT=3000
-DB_PATH="data/records.sqlite"
+DATABASE_URL="postgres://user:pass@host:5432/dbname"
+DATABASE_URL_TEST="postgres://user:pass@host:5432/dbname_test"
