--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "test": "node --test"
   },
   "dependencies": {
-    "better-sqlite3": "^11.7.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.5",
     "typescript": "^5.4.5"
   }
 }
