--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ API_KEY="replace-me"
 PORT=3000
 DATABASE_URL="postgres://user:pass@host:5432/dbname"
 DATABASE_URL_TEST="postgres://user:pass@host:5432/dbname_test"
+# Supabase/Vercel integration variables (preferred when present)
+POSTGRES_URL="postgres://user:pass@host:5432/dbname"
+POSTGRES_URL_NON_POOLING="postgres://user:pass@host:5432/dbname"
