--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "tsc",
     "start": "node dist/src/server/index.js",
     "dev": "node --watch dist/src/server/index.js",
+    "pre-migrate": "npm run build",
+    "migrate": "node dist/src/migrate.js",
     "pre-scrape": "npm run build",
     "scrape": "node dist/src/collector/index.js",
     "test": "node --test"
