--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
+# Copy this to `.env.dev` (local dev) or `.env.prod` (local prod).
+
 TARGET_URL="https://www.example.com"
 API_KEY="replace-me"
 PORT=3000
 DATABASE_URL="postgres://user:pass@host:5432/dbname"
-DATABASE_URL_TEST="postgres://user:pass@host:5432/dbname_test"
-# Supabase/Vercel integration variables (preferred when present)
+DATABASE_SSLMODE="require"
+
+# Optional: Supabase/Vercel integration variables (preferred when present)
 POSTGRES_URL="postgres://user:pass@host:5432/dbname"
 POSTGRES_URL_NON_POOLING="postgres://user:pass@host:5432/dbname"
