Relax Supabase SSL unless strict

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ API_KEY="replace-me"
 PORT=3000
 DATABASE_URL="postgres://user:pass@host:5432/dbname"
 DATABASE_SSLMODE="require"
+DATABASE_SSLMODE_STRICT="false"
 
 # Optional: Supabase/Vercel integration variables (preferred when present)
 POSTGRES_URL="postgres://user:pass@host:5432/dbname"
