--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,18 @@
 # Copy this to `.env.dev` (local dev) or `.env.prod` (local prod).
 
-TARGET_URL="https://www.example.com"
+TARGET_URL="https://www.petplace.com"
 API_KEY="replace-me"
 PORT=3000
 DATABASE_URL="postgres://user:pass@host:5432/dbname"
 DATABASE_SSLMODE="require"
 DATABASE_SSLMODE_STRICT="false"
+
+# PetPlace search defaults
+PETPLACE_BREED="DOBERMAN PINSCH"
+PETPLACE_ZIP="94110"
+PETPLACE_RADIUS="100"
+# Optional full override for search URL
+# PETPLACE_SEARCH_URL="https://www.petplace.com/pet-adoption/search?..."
 
 # Optional: Supabase/Vercel integration variables (preferred when present)
 POSTGRES_URL="postgres://user:pass@host:5432/dbname"
