Use PetPlace search API POST when HTML is empty

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ DATABASE_SSLMODE_STRICT="false"
 PETPLACE_BREED="DOBERMAN PINSCH"
 PETPLACE_ZIP="94110"
 PETPLACE_RADIUS="100"
+PETPLACE_START_INDEX="0"
 # Optional full override for search URL
 # PETPLACE_SEARCH_URL="https://www.petplace.com/pet-adoption/search?..."
 
