--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DATABASE_SSLMODE_STRICT="false"
 # PetPlace search defaults
 PETPLACE_BREED="DOBERMAN PINSCH"
 PETPLACE_ZIP="94110"
+PETPLACE_ZIPS="95501,96001,96130,95928,95814,94103,93940,93721,93301,92262,92101"
 PETPLACE_RADIUS="100"
 PETPLACE_START_INDEX="0"
 # Optional full override for search URL
