Rename collector env vars to COLLECTOR_TARGET

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,13 @@ DATABASE_SSLMODE="require"
 DATABASE_SSLMODE_STRICT="false"
 
 # PetPlace search defaults
-PETPLACE_BREED="DOBERMAN PINSCH"
-PETPLACE_ZIP="94110"
-PETPLACE_ZIPS="95501,96001,96130,95928,95814,94103,93940,93721,93301,92262,92101"
-PETPLACE_RADIUS="100"
-PETPLACE_START_INDEX="0"
+COLLECTOR_TARGET_BREED="DOBERMAN PINSCH"
+COLLECTOR_TARGET_ZIP="94110"
+COLLECTOR_TARGET_ZIPS="95501,96001,96130,95928,95814,94103,93940,93721,93301,92262,92101"
+COLLECTOR_TARGET_RADIUS="100"
+COLLECTOR_TARGET_START_INDEX="0"
 # Optional full override for search URL
-# PETPLACE_SEARCH_URL="https://www.petplace.com/pet-adoption/search?..."
+# COLLECTOR_TARGET_SEARCH_URL="https://api.petplace.com/animal"
 
 # Optional: Supabase/Vercel integration variables (preferred when present)
 POSTGRES_URL="postgres://user:pass@host:5432/dbname"
