Remove provider name from code and docs

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,23 @@
 # Copy this to `.env.dev` (local dev) or `.env.prod` (local prod).
 
-TARGET_URL="https://www.petplace.com"
+TARGET_URL="https://www.source.example"
 API_KEY="replace-me"
 PORT=3000
 DATABASE_URL="postgres://user:pass@host:5432/dbname"
 DATABASE_SSLMODE="require"
 DATABASE_SSLMODE_STRICT="false"
 
-# PetPlace search defaults
+# Source search defaults
 COLLECTOR_TARGET_BREED="DOBERMAN PINSCH"
 COLLECTOR_TARGET_ZIP="94110"
 COLLECTOR_TARGET_ZIPS="95501,96001,96130,95928,95814,94103,93940,93721,93301,92262,92101"
 COLLECTOR_TARGET_RADIUS="100"
 COLLECTOR_TARGET_START_INDEX="0"
 # Optional full override for search URL
-# COLLECTOR_TARGET_SEARCH_URL="https://api.petplace.com/animal"
+# COLLECTOR_TARGET_SEARCH_URL="https://api.source.example/animal"
+# Optional source URL overrides (avoid hard-coding provider names in code)
+COLLECTOR_TARGET_BASE_URL="https://www.source.example"
+COLLECTOR_TARGET_API_URL="https://api.source.example"
 
 # Optional: Supabase/Vercel integration variables (preferred when present)
 POSTGRES_URL="postgres://user:pass@host:5432/dbname"
